syntax = "proto3";

package com.roje.bombak.nn.proto;

message RoomSetting {
    int32 seatSize = 1;//座位数
    int32 method = 2;//玩法
    int32 baseScore = 3;//底分
    int32 betMultiple = 4; //下注倍数
    int32 rushMultiple = 5;//抢庄倍数
    int32 roundSize = 6;//局数
    int32 startMode = 7;//开始模式
    bool joinHalfWay = 8;//中途加入游戏
    bool szn = 9;
    bool thn = 10;
    bool whn = 11;
    bool hln = 12;
    bool zdn = 13;
    bool wxn = 14;
    bool ths = 15;
    bool aa = 16;
}

message RushData{
    int64 uid = 1;
    int32 status = 2;
}

//抢庄
message NoticeRush {
    int32 time = 1;
    repeated RushData rushData = 2;
}

message RushReq {
    int32 mul = 1;
}

message RushRes {
    int32 mul = 1;
    int64 uid = 2;
}

message BetData{
    int64 uid = 1;
    int32 status = 2;
    int32 bet = 3;
}

//下注
message NoticeBet {
    int32 time = 1;
    repeated BetData betData = 2;
}

message BetReq {
    int32 bet = 1;
}

message NoticeDeal{
    repeated DealData dealData = 1;
}

message BetRes {
    int32 bet = 1;
    int64 uid = 2;
}

//通知本局庄家
message NoticeBanker {
    int64 uid = 1;
}

message CheckData{
    int64 uid = 1;
    int32 status = 2;
}
//通知算牌
message NoticeCheck {
    int32 time = 1;
    repeated CheckData checkData = 2;
}

message CheckReq{}

message CheckRes{
    int64 uid = 1;
}

message HandCard {
    int64 uid = 1;
    repeated int32 hands = 2;
    int32 niu = 3;
    int32 result = 4;
    int32 score = 5;
}


//房间数据
message RoomData{
    int64 id = 1;
    int64 ownerId = 2;
    string name = 3;
    int32 roomType = 4;
    bool closed = 5;
    bool gameStart = 6;
    bool cardRoundStart = 7;
    int32 round = 8;
    RoomSetting roomSetting = 9;
    repeated PlayerData playerData = 10;
}

message DealData{
    int64 uid = 1;
    int32 size = 2;
    repeated int32 pokers = 3;
}

message PlayerData {
    int64 uid = 1;
    string nickname = 2;
    string headImg = 3;
    int32 seat = 4;
    bool offline = 5;
    bool ready = 6;
    bool inGame = 7;
    int32 voteStatus = 8;
    int32 rushStatus = 9;
    int32 betStatus = 10;
    int32 checkStatus = 11;
    int32 handCardSize = 12;
    repeated int32 openCards = 13;
}




